<resources>
    <string name="app_name">Blog</string>
    <string name="hint_name">Nome</string>
    <string name="hint_mail">Mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmpassword">Conferma Password</string>
    <string name="hint_popup_title">Titolo</string>
    <string name="hint_popup_description">Descrizione</string>
    <string name="btn_text">Registrati</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profilo</string>
    <string name="nav_settings">Impostazioni</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>